fixed screen size on mobile, made add gift form openly smoothly

--- a/public/giftee.css
+++ b/public/giftee.css
@@ -13,9 +13,15 @@ html {
 }
 
 body{
-    margin: 0px;
+    margin: 0;
+    padding: 0;
     font-family: Inter,sans-serif;
     background-color: var(--background-color);
+}
+
+main {
+    margin: 0;
+    padding: 0;
 }
 
 /*------------------------------------------ 
@@ -42,7 +48,7 @@ nav {
     align-items: center;
     width: 100%;
     max-width: 65rem;
-    margin: 0 auto;
+    margin: auto auto;
 }
 
 nav img {
@@ -60,7 +66,6 @@ nav div {
 .main-content {
     background-color: white;
     border: 1px solid #DFE1E6;
-    width: 100%;
     max-width: 75rem;
     margin: 1rem auto;
     border-radius: 5px;
@@ -74,6 +79,10 @@ nav div {
 /*------------------------------------------ 
     add gift form 
 ------------------------------------------*/
+#add-gift {
+    position: relative;
+}
+
 #gift-top, #gift-bottom {
     border: solid;
     width: 100%;
@@ -88,17 +97,14 @@ nav div {
 }
 
 #add-gift-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    visibility: hidden;
     position: absolute;
+    width: 90%;
+    left: 0; 
+    right: 0; 
+    margin-left: auto; 
+    margin-right: auto; 
+    visibility: hidden;
     opacity: 0;
-    width: 80%;
-    margin: .5rem auto;
-    border: 3px solid var(--color-border);
-    border-radius: 10px;
-    padding: 1rem 0;
 }
 
 #gift-bottom {
@@ -108,6 +114,8 @@ nav div {
     align-items: center;
     justify-content: center;
     user-select: none;
+    transition: 1s;
+    margin-top: 0;
 }
 
 /*------------------------------------------ 
@@ -192,7 +200,7 @@ form button {
 footer {
     background-color: white;
     border: 1px solid #DFE1E6;
-    padding: 2rem 0;
+    width: 100%;
 }
 
 footer h1 {margin: 0; padding: 1rem;}
